# Schedule_1_Mix_Finder

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Readme.md
data_scraping/: data_borrower.py
include/: custom_components.h  data.h  data_structures.h  enumerate.h  gui.h  product_tree.h  query_manager.h  radix.h  raw_data.h
src/: data.cpp  data_structures.cpp  filter_check.cpp  gui.cpp  main.cpp  product_detail.cpp  product_table.cpp  product_tree.cpp  sort_button.cpp  vertical_slider.cpp
